@@ -1,3 +1,7 @@
+2003-03-14  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/Makefile.am: fix building of marshals.
+
 2003-03-13  Ross Burton  <ross@burtonini.com>
 
 	* src/dh-window.c: Removed dead code. Will add it again in the
